--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://jorgenboganes.github.io/julereisen",
+  "homepage": "http://julereisen.no",
   "name": "julereisen",
   "version": "0.1.0",
   "private": true,
