--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://joregnboganes.github.io/julereisen",
+  "homepage": "https://jorgenboganes.github.io/",
   "name": "julereisen",
   "version": "0.1.0",
   "private": true,
@@ -24,7 +24,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d bui3ld",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
