--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://julereisen.no/",
+  "homepage": "https://jorgenboganes.github.io/julereisen",
   "name": "julereisen",
   "version": "0.1.0",
   "private": true,
